--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,3 +28,6 @@ Description: simple R package that replicates the central dogma of molecular bio
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 2.10)
+RoxygenNote: 7.2.3
